tests/ui/parser/keyword-else-as-identifier.stderr
error: expected identifier, found keyword `else`
  --> $DIR/keyword-else-as-identifier.rs:4:9
   |
LL |     let else = "foo";
   |         ^^^^ expected identifier, found keyword
   |
help: escape `else` to use it as an identifier
   |
LL |     let r#else = "foo";
   |         ++

error: aborting due to previous error

