tests/ui/parser/keyword-else-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py else'

fn main() {
    let else = "foo"; //~ error: expected identifier, found keyword `else`
}
